--- a/index.html
+++ b/index.html
@@ -12,5 +12,10 @@
 
     <!-- your code here! See README.md for deliverables -->
 
+    <video autoplay controls width="600px" height="400px">
+      <source src="https://www.youtube.com/watch?v=50GQjUZ4P3M" type="video/mp4">
+      <source src="https://www.youtube.com/watch?v=50GQjUZ4P3M" type="video/ogg">
+      Your browser does not support HTML5 video  <a href="https://browsehappy.com/" target="_blank">Please upgrade your browser</a>
+    </video>
   </body>
 </html>
